Archive2/e9/dd7411c71a0f18/output
+ mv main.cpp main.c
+ gcc -std=c89 -O0 -Wall -Wextra -pedantic -pthread main.c
main.c: In function 'main':
main.c:6:5: warning: ISO C90 forbids variable length array 'strName' [-Wvla]
     char strName[STR_NAME] = "abc";
     ^
main.c:6:5: error: variable-sized object may not be initialized
